--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,8 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+!vendor/modules.txt
 
 # Go workspace file
 go.work
